# ml_2_sql

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  Readme.md  build.sh  check_model.py  create_config.py  hello.json  main.py  pyproject.toml  requirements.txt  run.py  run.sh  setup.py  test_model.py
.github/workflows/: ci.yml  release.yml  run_test.yml
bash_utils/: bash_menu.sh
docs/: TODO.md  devReadMe.md  requirements-dev.txt  requirements.txt
helper_scripts/: setup.py
input/configuration/: AA_fi_cr_pred.json  AA_fi_trim_cr_pred.json  collection_rate_bin_pred2.json  example.json  example_binary_titanic.json  example_multiclass_faults.json  example_multiclass_faults_slim.json  example_regression.json  example_regression_used_cars.json  example_regression_used_cars_auto_config.json  example_titanic.json  nl_2021_cr.json  option_trading.json
input/data/: example_binary_titanic.csv  example_multiclass_faults.csv  example_regression_real_estate.csv  example_regression_used_car.csv  example_regression_used_cars.csv
ml2sql/: __init__.py  cli_init.py  cli_run.py  main.py  quick_clean_data.py
ml2sql/data/configuration/: example_binary_titanic.json  example_multiclass_faults.json  zexample_multiclass_faults_ebm.json
ml2sql/data/data/: example_multiclass_faults.csv  example_regression_used_cars.csv
ml2sql/utils/: create_config.py  modelcreater.py  modeltester.py
ml2sql/utils/helper_functions/: checks.py  config_handling.py  parsing_arguments.py  setup_logger.py
ml2sql/utils/modelling/: main_modeler.py  performance.py
ml2sql/utils/output_scripts/: decision_tree_as_code.py  ebm_as_code.py  l_regression_as_code.py
ml2sql/utils/pre_processing/: pre_process.py
scripts/: create_config.py  main.py  modeltester.py  setup.py
scripts/utils/feature_selection/: correlations.py
scripts/utils/helper_functions/: checks.py  config_handling.py  parsing_arguments.py  setup_logger.py
scripts/utils/modelling/: calibration.py  main_modeler.py  performance.py
scripts/utils/output_scripts/: decision_rule_as_code.py  decision_tree_as_code.py  ebm_as_code.py  l_regression_as_code.py
scripts/utils/pre_processing/: pre_process.py
scripts/utils/test_helpers/: sql_model.py
src/ml2sql/: __init__.py  cli_check_model.py
src/ml2sql/utils/: modelcreater.py
tests/: __init__.py  conftest.py  pytest.ini  test_checks.py  test_cli.py  test_config_handling.py  test_functions_in_main.py  test_main.py  test_run_decisiontree_flows.py  test_run_ebm_flows.py  test_run_lregression_flows.py  test_utils.py
tests/configs/: config_no_split.json  config_split.json
tests/integration/: test_check_version.py  test_cli.py  test_cli_commands.py  test_cli_run.py  test_create_config.py  test_dt_sql.py  test_ebm_sql.py  test_functions_in_main.py  test_lr_sql.py  test_main.py
tests/model/: binary_dt_classification.sav  binary_dt_classification_v051.sav  binary_ebm_classification.sav  binary_ebm_classification_v051.sav  binary_lr_classification.sav  binary_lr_classification_v051.sav  multiclass_dt_classification.sav  multiclass_dt_classification_v051.sav  multiclass_ebm_classification.sav  multiclass_ebm_classification_v051.sav  multiclass_lr_classification.sav  multiclass_lr_classification_v051.sav  regression_dt_regression.sav  regression_dt_regression_v051.sav  regression_ebm_regression.sav  regression_ebm_regression_v051.sav  regression_lr_regression.sav  regression_lr_regression_v051.sav
tests/unit/: test_correlation_functions.py  test_create_config.py  test_functions_in_main.py
utils/: checks.py  config_handling.py  pre_process.py
utils/feature_selection/: clustermap.py  correlations.py
utils/helper_functions/: checks.py  config_handling.py  parsing_arguments.py
utils/modelling/: calibration.py  confusionMatrix_slider.py  decision_list.py  decision_rule.py  decision_tree.py  ebm.py  main_modeler.py  performance.py
utils/output_scripts/: decision_tree_as_code.py  ebm_as_code.py  rulefit_get_rules.py
utils/pre_processing/: pre_process.py
(+36 files in other folders)
