[build-system]
requires = [
    "setuptools >= 61.10.0",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "ml2sql"
version = "0.1.2"
authors = [
    {name = "Kasper de Harder", email = "kasperde@hotmail.com"},
]
description = "Automated interpretable ML tool with SQL version of model"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "interpret == 0.5.1",
    "numpy<2",
    "imblearn",
    "kaleido",
    "typer",
    'pywin32 ; platform_system == "Windows"',
]

keywords = ["SQL", "ML", "automl", "interpret", "ML 2 SQL", "EBM", "Explainable Boosting Machine", "ML to SQL"]

[project.urls]
Homepage = "https://github.com/kaspersgit/ml_2_sql"
Issues = "https://github.com/kaspersgit/ml_2_sql/issues"

[project.optional-dependencies]
dev = [
    "duckdb",
    "pytest",
    "pytest-mock",
    "pip-tools",
    "ruff",
    "pre-commit",
    "coverage",
    "twine",
    "wheel"
]

[project.scripts]
ml2sql = "ml2sql.main:app"