[build-system]
requires = [
    "setuptools >= 61.10.0",
    "setuptools-scm >= 8.0.1"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ml2sql", "ml2sql*"]

[tool.setuptools.package-data]
"ml2sql.data" = ["**/*"]

[project]
name = "ml2sql"
dynamic = ["version"]
authors = [
    {name = "Kasper de", email = "kasperde@hotmail.com"},
]
description = "Automated interpretable ML tool with SQL version of model"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "interpret == 0.6.3",
    "numpy~=1.24.4",
    "duckdb~=1.2.1",
    "scikit-learn~=1.3.2",
    "imblearn",
    "kaleido==0.2.0",
    "typer~=0.15.2",
    'pywin32 ; platform_system == "Windows"',
    "pytest~=8.3.5",
]

keywords = ["SQL", "ML", "automl", "interpret", "ML 2 SQL", "EBM", "Explainable Boosting Machine", "ML to SQL"]

[project.urls]
Homepage = "https://github.com/kaspersgit/ml_2_sql"
Issues = "https://github.com/kaspersgit/ml_2_sql/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pip-tools",
    "ruff",
    "pre-commit",
    "coverage"
]

[project.scripts]
ml2sql = "ml2sql.main:app"

[tool.setuptools.dynamic]
version = {attr = "ml2sql.__version__"}

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests"
]
log_cli = true
log_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools_scm]
